2007-07-22  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/LinkContext.cs:
		If no file found with -a, try to resolve it.

	* Mono.Linker/Driver.cs
	  Mono.Linker/Pipeline.cs:
		Adjust the visibility only once, even with multiple -i.

2007-07-21  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/SweepStep.cs:
		Sweep memberrefs along with the typerefs.

2007-07-20  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/AdjustVisibilityStep.cs:
		Don't change the visibility of the members if the type
		is marked internal.

2007-07-18  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/ResolutionException.cs:
	  Mono.Linker.Steps/MarkStep.cs:
		Throw a resolution exception when a metadata item
		can not be resolved in external assemblies.

	* Mono.Linker/AssemblyResolver.cs:
		Use the assembly name only as a key for the
		assembly cache.

2007-07-05  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/Driver.cs
	  Mono.Linker/Pipeline.cs:
		Add a way to install steps in the pipeline
		from the outside.

2007-07-03  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/Driver.cs:
		Add support for @files

	* Mono.Linker/Driver.cs:
		Add a way to add search directories to the resolver.

2007-06-18  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/MarkStep.cs:
		Mark generic parameter constraints.

	* Mono.Linker.Steps/MarkStep.cs:
		Mark modifiers of modtype.

2007-06-15  Jb Evain  <jbevain@novell.com>

	* Mono.Linker/Driver.cs,
	  Mono.Linker/I18nAssemblies.cs,
	  Mono.Linker.Steps/LoadI18nAssemblies.cs:
		Copy the i18n assemblies when running Mono.

	* Mono.Linker/CustomResolver.cs => AssemblyResolver.cs,
	  Mono.Linker/Annotations.cs,
	  Mono.Linker/LinkContext.cs,
	  Mono.Linker.Steps/ResolveFromXmlStep.cs:
		Clean up the assembly reference system.
		Fixes bug where the linker have multiple
		time the same assembly in its cache.

2007-06-13  Jb Evain  <jbevain@novell.com>

	* Mono.Linker.Steps/OutputStep.cs:
		Copy .config files alongs with assemblies.
